add:buttons and efects

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 </head>
 
 <body>
-
-    <header class="  position-relative">
+    <header class="position-relative" id="header">
         <div class="position-relative" style="z-index: 0;">
             <img class="hero" src="./img/background_hero.png">
         </div>
@@ -28,16 +27,17 @@
                 <ul class="text-warning list-group list-unstyled list-group-horizontal"
                     style="z-index: 1;max-width: 50rem;">
                     <li class="p-5 list-member fw-bolder " style="z-index: 1; font-size: 1.5rem;">
-                    Gpath    
+                        <a href="index.html#header" style="    text-decoration: none;color: rgba(var(--bs-warning-rgb),var(--bs-text-opacity))!important;">
+                            Gpath</a> 
                     </li>
                     <li class="p-5 list-member" style="z-index: 1;">
-                        Objetivo
+                        <a href="index.html#Objetivo" style="    text-decoration: none;color: rgba(var(--bs-warning-rgb),var(--bs-text-opacity))!important;">Objetivo</a> 
                     </li>
                     <li class="p-5 list-member" style="z-index: 1;">
-                        Recompensas
+                        <a href="index.html#Beneficio" style="    text-decoration: none;color: rgba(var(--bs-warning-rgb),var(--bs-text-opacity))!important;">Recompensas</a> 
                     </li>
                     <li class="p-5 list-member" style="z-index: 1;">
-                        Contáctanos
+                        <a href="index.html#Contactanos"style="    text-decoration: none;color: rgba(var(--bs-warning-rgb),var(--bs-text-opacity))!important;">Contactanos</a> 
                     </li>
                     
                 </ul>
@@ -107,13 +107,13 @@
                 <img class="rounded-4" style="width:11rem" src="img/rail-3.png" alt="">
 
             </div>
-            <div style="background-color:#9DC6EF; min-width: 5rem; margin-top: 6rem;" class="py-1  mx-auto w-50 "> </div>
+            <div style="background-color:#9DC6EF; min-width: 5rem; margin-top: 6rem;" class="py-1  mx-auto w-50 " id="Objetivo"> </div>
             <div><p style="color:#2C87E3; font-size: 1.5rem;" class="text-center py-1 my-4 mx-auto w-50 fw-bolder">Nuestro objetivo, es darte a conocer una nueva forma de visitar lugares desconocidos o conocidos que te aguardan mediante un elegante sistema de realidad aumentada.</p></div>
         </section>
 
         <section class="contenedor paseos-beneficios">
 
-            <div class="contenedor-paseos-beneficios">
+            <div class="contenedor-paseos-beneficios" id="Beneficio">
                 <div class="contenido-textos mx-5">
                     <br><br><br><br><br><br><br><br><br><br><br><br>
                     <h2><span></span>Explora nuevos 
@@ -153,7 +153,7 @@
                 </div>
 
         </section>
-        <div class="container-form">
+        <div class="container-form" id="Contactanos">
             <div class="info-form">
                 <h2>Contáctanos</h2>
                 <p>¿Necesita hablar con nosotros? Rellena el formulario
